# little_owls

./: .gitignore  .gitmodules  411aac75-9b71-4f74-9d25-81d125b72918_out.txt  CMakeCache.txt  CMakeLists.txt  Individual  Individual.cpp  Makefile  Makevars.win  Model.cpp  README.md  RandomGenerator.cpp  RandomGenerator.h  RunSim  RunSim.cpp  RunSim.h  Wrapper.cpp  a_temp_file_out.txt  callModel.cpp  cmake_install.cmake  main  main.cpp  ndarray.h  run.sh
Individual.dSYM/Contents/: Info.plist
Individual.dSYM/Contents/Resources/DWARF/: Individual
main.dSYM/Contents/Resources/DWARF/: main
output/: libTinyTIFFShared_Release.so.3.0.0.0  tinytiffreader_test  tinytiffwriter_speedtest  tinytiffwriter_test
runSim.dSYM/Contents/: Info.plist
runSim.dSYM/Contents/Resources/DWARF/: runSim
